Dialog Package Coming Soon Collection List Create Collection

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "devDependencies": {
     "electron": "^19.0.8",
     "electron-is-dev": "^2.0.0"
+  },
+  "dependencies": {
+    "dialogs": "^2.0.1"
   }
 }
